# NoiseCutter

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _typos.toml  help.txt  pyproject.toml  tool-versions.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr.yml  release.yml
ci/: github-action.yml  pr-fastpath.yml  release.yml
docs/: EXCEPTION_PLAYBOOK.md  INTEGRATIONS.md  QUICKSTART.md  RFC_TEMPLATE.md  THREAT_MODEL.md  TROUBLESHOOTING.md  WHY_REACHABILITY.md
examples/go-mod-sample/: Makefile  README.md  go.mod
examples/go-mod-sample/cmd/server/: main.go
examples/go-multi-entry/: Makefile  README.md  go.mod
examples/go-multi-entry/cmd/server/: main.go
examples/go-multi-entry/cmd/worker/: main.go
examples/go-multi-entry/internal/dormant/: dormant.go
noisecutter/: cache.py  cli.py  config.py  exit_codes.py  logging_utils.py  utils.py
noisecutter/core/: fuse.py  policy.py  types.py
noisecutter/integrations/: osv_adapter.py  syft_adapter.py
noisecutter/integrations/go/: govulncheck_adapter.py
policy/: default_policy.yaml
recipes/: go_fastpath.py
scripts/: install-syft.ps1  install-syft.sh
tests/: test_config.py  test_fuse_golden.py  test_fuse_severity_levels.py  test_fuse_validate.py  test_osv_contract.py  test_policy.py  test_utils.py
tests/fixtures/: minimal_reach.json  minimal_sbom.json  minimal_vulns.json
tests/golden/: expected_fuse_minimal.json
