[project]
name = "noisecutter"
version = "0.1.0"
description = "NoiseCutter: Prove what’s exploitable; ignore the rest. Reachability over SCA."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "NoiseCutter Authors" }
]
keywords = ["security", "SBOM", "SARIF", "reachability", "SCA", "OSV", "CI", "DevSecOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security"
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.3",
  "packageurl-python>=0.11",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.4.5",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "types-requests",
]

[project.urls]
Homepage = "https://github.com/your-org/noisecutter"
Issues = "https://github.com/your-org/noisecutter/issues"

[project.scripts]
noisecutter = "noisecutter.cli:main"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noisecutter"]

[tool.hatch.build.targets.sdist]
include = [
  "noisecutter",
  "README.md",
  "LICENSE",
  "policy",
  "ci",
  "docs",
  "recipes",
  "converters",
  "examples",
  "pyproject.toml",
  ".pre-commit-config.yaml",
  ".gitignore",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["B", "C4", "I", "UP", "RUF"]
exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint.isort]
known-first-party = ["noisecutter"]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
ignore_missing_imports = true


