[project]
name = "noisecutter"
version = "0.1.0"
description = "NoiseCutter: Prove what's exploitable; ignore the rest. Reachability over SCA."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "NoiseCutter Authors", email = "team@noisecutter.dev" }]
maintainers = [
  { name = "NoiseCutter Maintainers", email = "team@noisecutter.dev" },
]
keywords = [
  "security",
  "SBOM",
  "SARIF",
  "reachability",
  "SCA",
  "OSV",
  "CI",
  "DevSecOps",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security",
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.3",
  "packageurl-python>=0.11",
  "PyYAML>=6.0.1",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.5",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "types-PyYAML>=6.0.12.20250402",
]

[project.urls]
Homepage = "https://github.com/noisecutter/noisecutter"
Repository = "https://github.com/noisecutter/noisecutter"
Documentation = "https://github.com/noisecutter/noisecutter/blob/main/docs/QUICKSTART.md"
Issues = "https://github.com/noisecutter/noisecutter/issues"
Changelog = "https://github.com/noisecutter/noisecutter/releases"
Security = "https://github.com/noisecutter/noisecutter/blob/main/SECURITY.md"

[project.scripts]
noisecutter = "noisecutter.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noisecutter"]

[tool.hatch.build.targets.sdist]
include = [
  "noisecutter",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "policy",
  "docs",
  "examples",
  "scripts",
  ".github",
  "pyproject.toml",
  "uv.lock",
  ".pre-commit-config.yaml",
  ".gitignore",
  ".editorconfig",
  "_typos.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint]
extend-select = ["B", "C4", "I", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["noisecutter"]

[tool.ruff.lint.per-file-ignores]
"noisecutter/cli.py" = ["B008", "B904", "RUF001"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::pytest.PytestDeprecationWarning:pytest_asyncio.*"]

[tool.coverage.run]
branch = true
source = ["noisecutter"]

[tool.coverage.report]
fail_under = 38
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
